# anki-hoplite

./: .gitignore  CLAUDE.md  Readme.md  atheaze-basic-2.csv  pyproject.toml  spec.md
.devcontainer/: devcontainer.json
docs/: BUG_LEMMATIZATION_MULTI_WORD.md  DUPLICATE_DETECTION_ISSUES.md  PLAN.md  WORKFLOW_FLASHCARD_PROCESSING.md
resources/: Unified-Greek.txt  config.json  greek-core-list.xml  greek_stopwords.txt  input-cards.csv  model_field_map.json  tag_conversion_map.json  tag_schema.json
samples/: candidates_sample.csv
src/anki_hoplite/: __init__.py  cli.py  cloze_recommender.py  cloze_validator.py  cltk_setup.py  context_analyzer.py  deck_index.py  detect_duplicates.py  ingest.py  lemmatize.py  normalize.py  report.py  tag_converter.py  tag_hygiene.py
src/anki_hoplite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_cloze_validator.py  test_detect_duplicates.py  test_integration.py  test_lemmatize.py  test_normalize.py  test_tag_hygiene.py
