[project]
name = "anki-hoplite"
version = "0.1.0"
description = "Ancient Greek Anki deck linter and duplicate detector (prototype)"
readme = "Readme.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Anki-Hoplite Contributors" }]
dependencies = [
  "cltk>=1.2.0",
  "requests>=2.31.0",
  # UI (optional later): "streamlit>=1.25.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
]

[project.scripts]
ankihoplite = "anki_hoplite.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

